--- a/style.css
+++ b/style.css
@@ -126,23 +126,14 @@ a {
 }
 
 .social-icons__link {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	
+	display: block;
+
 	width: 50px;
 	height: 50px;
 	margin: 10px;
 	
 	overflow: hidden;
 	border-radius: 50%;
-}
-
-.social-icons__img {
-	padding: 20px;
-	margin-top: 3px;
-
-	background: #f26c4f;
 }
 
 /*===*/
@@ -346,7 +337,7 @@ a {
 	position: absolute;
 	left: 17px;
 	content: '';
-	background-image: url(img/message-icon.png);
+	background-image: url(img/icons/message-icon.png);
 	width: 15px;
 	height: 13px;
 }
@@ -390,4 +381,18 @@ a {
 	margin-top: 35px;
 
 	color: #787878;
+}
+
+/*icons*/
+
+.facebook-icon {
+	background: #f26c4f url(img/icons/facebook.png) center center no-repeat;
+}
+
+.rss-icon {
+	background: #f26c4f url(img/icons/rss.png) center center no-repeat;
+}
+
+.twitter-icon {
+	background: #f26c4f url(img/icons/twitter.png) center center no-repeat;
 }
