--- a/style.css
+++ b/style.css
@@ -577,7 +577,6 @@ a {
 	.news-section__images-wrapper {
 		flex-direction: column;
 		align-items: center;
-		text-align: center;
 	}
 
 	.news__image-card:last-child {
@@ -585,6 +584,13 @@ a {
 	}
 
 	.news__image-card {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 		margin-bottom: 20px;
 	}
 }
