--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
-/* 0. genera */
+/* 0. general */
 /* 0.1 icons */
+/* 0.2 dropdown menu */
+/* 0.3 hover */
+
 /* 1. header */
 /* 1.1 header news line */
+
 /* 2. description */
+
 /* 3. persons slider */
+
 /* 4. article section */
+
 /* 5. news section */
+
 /* 6. footer */
+
 /* 7. media */
 
 
 
-/* genera */
+/* general */
 
 *,
 *::before,
@@ -111,6 +120,120 @@ a {
 .twitter-icon {
 	background: #f26c4f url(img/icons/twitter.png) center center no-repeat;
 }
+
+/* 0.2 dropdown menu */
+
+.home-item {
+	position: relative;
+}
+
+.dropdown-menu {
+	/*display: none;*/
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+	top: 10px;
+	left: 0;
+	padding: 30px 65px 45px 30px;
+	background: #272727;
+	font-size: 12px;
+	border-radius: 5px;
+
+	transition: .9s;
+}
+
+.home-item:hover .dropdown-menu {
+	/*display: block;*/
+	opacity: 1;
+	transform: translateY(35px);
+	visibility: visible;
+	transition:  ease-in .4s;
+
+}
+
+.dropdown-menu__item {
+	
+	position: relative;
+	white-space: nowrap;
+	color: #fff;
+	display: block;
+}
+
+.dropdown-menu__item:not(:last-child) {
+	margin-bottom: 20px;
+}
+
+/* 0.3 hover */
+
+/*.header__logo {
+
+}*/
+
+@keyframes logo-hovered {
+	15% {
+		transform: translateX(9px);
+	}
+
+	30% {
+		transform: translateX(-9px);
+	}
+
+	40% {
+		transform: translateX(-6px);
+	}
+
+	50% {
+		transform: translateX(3px);
+	}
+
+	65% {
+		transform: translateX(0);
+	}
+}
+
+.header__logo:hover {
+	animation: logo-hovered 0.7s ease;
+	animation-iteration-count: 1;
+}
+
+.dropdown-menu__item:hover,
+.nav__item:hover .nav__item-link {
+	transition: .2s;
+	color: #e4593a;
+}
+
+.social-icons__link {
+	transition: transform .6s ease-out;
+}
+
+.social-icons__link:hover {
+	transform: scale(1.1);
+	transition: transform .4s ease;
+}
+
+@keyframes change-color {
+
+	30% {
+		background-color: #FA5858;
+		color: #B40404;
+	}
+
+	70% {
+		background-color: #F79F81;
+	}
+
+}
+
+.footer__form__button {
+	transition: .4s transform  ease-out;
+}
+
+.footer__form__button:hover {
+	transform: scale(1.1);
+	animation: change-color 1.8s ease;
+	animation-iteration-count: infinite;
+}
+
 
 /* 1. header */
 
